# ismain

./: .coveragerc  .gitignore  LICENSE.txt  blackify.bat  make_venv.bat  pypi.bat  pyproject.toml  readme.md  requirements-dev.txt  setup.py
.github/workflows/: ci.yml  python-package.yml
benchmark/: benchmark.bat  benchmark_ismain.py  benchmark_legacy.py  benchmark_results.md  make_venv.bat
docs/: flake8_report.txt
docs/source/: readme.rst
example/: is_main_example.py
ismain/: __init__.py  __version__.py  is_main.py
scripts/: blackify.bat  make_docs.bat  pypi.bat  run-ci-local.ps1  run_flake8.bat  run_mypy.bat
source/: conf.py  index.rst
test_is_main/: test_is_main.py
